reparaciones varias en pasteles personal y funcionamiento para que use periodo actual en oim para que muestre periodo si es actualizado

--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -525,7 +525,8 @@
             <tr class="info">
               <th></th>
               {% for year in year_list %}
-                <th class="text-center">{{ year }}</th>
+              <th class="text-center">{{ year }}
+                  {% if periodo_list|keyvalue:year == 'A' %}*Actualizado*{% endif %}</th>
               {% endfor %}
             </tr>
             {% for key, data in porano.items %}
