consolidado municipal unicamente if not municipio

--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -464,7 +464,7 @@
         <!--maribel 20/07 ogm-tabla 8 -->
         <div class="col-md-8">
         	{% descargar_excel "ogm7" %}
-            <h3>Ejecución Presupuestaria por destino de gastos. Consolidado municipal</h3>
+            <h3>Ejecución Presupuestaria por destino de gastos. {% if not municipio %}Consolidado municipal {% endif %}</h3>
             <h4 class="text-info">Millones de c&oacute;rdoba corrientes</h4>
             <table class="table table-condensed">
                 <tr  class="info">
