--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -14,9 +14,11 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="http://cdn.bootcss.com/animate.css/3.5.1/animate.min.css">
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="{% static 'js/ie-emulation-modes-warning.js' %}"></script>
+
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -27,19 +29,13 @@
     <!-- Custom styles for this template -->
     <link href="{% static 'css/carousel.css' %}" rel="stylesheet">
     <link href="{% static 'css/custom.css' %}" rel="stylesheet">
+    <link href="{% static 'css/menu.css' %}" rel="stylesheet">
     <script src="{% static 'jquery-1.11.2.min.js' %}"></script>
     <script src="{% static 'highcharts.js' %}"></script>
     <script src="{% static 'js/jquery.imagemapster.js' %}"></script>
 
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/tooltip.js' %}"></script>
-    <script type="text/javascript">
-        $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip({
-            placement : 'top'
-            });
-        });
-    </script>
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -53,73 +49,33 @@
   </head>
 <!-- NAVBAR
 ================================================== -->
-  <body>
-    <div class="navbar-wrapper">
-      <div class="container">
-
-        <nav class="navbar navbar-inverse navbar-static-top">
-          <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <h2 class="titular-header"><a href="/">Presupuestos Municipales Abiertos</a></h2>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse pull-right">
-              <ul class="nav navbar-nav">
-                <li class="active"><a href="{% url 'home' %}">INICIO</a></li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PRESUPUESTOS <span class="caret"></span></a>
-                  <ul class="dropdown-menu" role="menu">
-                    <li><a href="{%url 'origen_ingresos'%}">Origen de los ingresos del municipio</a></li>
-                   <li><a href="{%url 'origen_gastos'%}">Destino del gasto municipal</a></li>
-                    <li class="divider"></li>
-                    <li><a href="{%url 'gastos_funcion'%}">Gastos de funcionamiento</a></li>
-                    <li><a href="{%url 'gastos_personal'%}">Gastos de personal</a></li>
-                    <li><a href="{%url 'autonomia_gastos'%}">Dependencia para asumir gastos corrientes</a></li>
-                    <li><a href="{%url 'ahorro_corriente'%}">Ahorro corriente para inversiones</a></li>
-                    <li><a href="{%url 'ejecucion_presupuesto'%}">Ejecuci&oacute;n del presupuesto</a></li>
-                    <li><a href="{%url 'inversion_categoria'%}">Inversiones</a></li>
-                    <li><a href="{%url 'detalle_presupuesto'%}">Descargar Detalle Presupuesto</a></li>
-                  </ul>
-                </li>
-                <li><a href="/core/plan-de-inversion/?inversion__anio=2015&inversion__municipio=1">PLANES DE INVERSIÓN</a></li>
-                <li><a href="/glosario">GLOSARIO</a></li>
-                <li><a href="/significado/">PRESENTACIÓN</a></li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </div>
+<body>
+<div class="encabezado">
+   <div class="container-fluid">
+     <div class="row">
+        <div class="col-md-4">
+            <h1>Presupuestos Municipales Abiertos</h1>
+        </div>
+        <div class="col-md-8">
+            <p>Consulta presupuestaria el 15 de Febrero</p>
+        </div>
+        <div class="col-md-12">
+            {% include "menu.html"%}
+        </div>
     </div>
-
-
+  </div>
+ </div>
     <!-- Carousel
     ================================================== -->
     {% block slide_portada %}
     {% endblock %}
-
-    <!--Cajas de colores de portada -->
-    {% block cajas_portada %}
+    
+    <!--Buscador Portada --> 
+    {% block buscador_portada %}                                                   
     {% endblock %}
-    <!--Fin de cajas de colores de portada -->
-
-    <!--graficos-->
-    <section id="graficos" class="{% if home %}graficos-portada {% endif %}inside">
-      <div class="container">
-	    <div class="row">
-            <div class="row-fluid">
-              {% block content %}
-              {% endblock %}
-              {% block main_content %}
-              {% endblock %}
-	        </div>
-	    </div>
-      </div>
-    </section>
+    
+    {% block main_content %}
+    {% endblock %}
 
     {% block inversiones_portada %}
     {% endblock %}
@@ -129,20 +85,20 @@
       <footer id="footer">
           <div class="row">
               <div class="container">
-
-        <p class="pull-right logos" style="margin-right: 25px;">
-        <a href="#"><img src="{% static 'img/aid.png' %}" alt="USAID"/ width="120" ></a>
-        <a href="#"><img src="{% static 'img/logoguegue.png' %}" alt="Guegue" width="140"/></a>
-        <a href="#"><img src="{% static 'img/gcom.png' %}" alt="Global communities" width="140" /></a>
-        </p>
-        <div class="col-md-12" style="margin-top:20px;margin-bottom:-30px;"><small> Las opiniones expresadas en este sitio web no reflejan necesariamente las de la Agencia de los Estados Unidos para el Desarrollo
-        
-            Internacional, USAID, o la del Gobierno de los Estados Unidos.</small></div>
-               </div>
-           </div>
+                   <div class="col-md-6 contacto">
+                        <p>Contactenos</p>
+                        <i class="fa fa-phone" aria-hidden="true"> (505) 0000-000</i><br />
+                        <i class="fa fa-envelope" aria-hidden="true">info@empresa.org</i><br />
+                        <i class="fa fa-map-marker" aria-hidden="true"> Managua Nicaragua</i><br />
+                  </div>
+                  <p class="pull-right logos" style="margin-right: 25px;">
+                      <a href="#"><img src="{% static 'img/aid.png' %}" alt="USAID"/ width="120" ></a>
+                      <a href="#"><img src="{% static 'img/logoguegue.png' %}" alt="Guegue" width="140"/></a>
+                      <a href="#"><img src="{% static 'img/gcom.png' %}" alt="Global communities" width="140" /></a>
+                  </p>
+              </div>
+         </div>
     </footer>
-
-    </div><!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
@@ -153,5 +109,84 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
     <script src="http://code.highcharts.com/4.1.1/highcharts-3d.js"></script>
+	<!-- Empieza el slider. Tomado de http://bootsnipp.com -->
+    <script type="text/javascript">
+(function( $ ) {
+
+    //Function to animate slider captions 
+    function doAnimations( elems ) {
+		//Cache the animationend event in a variable
+		var animEndEv = 'webkitAnimationEnd animationend';
+		
+		elems.each(function () {
+			var $this = $(this),
+				$animationType = $this.data('animation');
+			$this.addClass($animationType).one(animEndEv, function () {
+				$this.removeClass($animationType);
+			});
+		});
+	}
+	
+	//Variables on page load 
+	var $myCarousel = $('#carousel-example-generic'),
+		$firstAnimatingElems = $myCarousel.find('.item:first').find("[data-animation ^= 'animated']");
+		
+	//Initialize carousel 
+	$myCarousel.carousel();
+	
+	//Animate captions in first slide on page load 
+	doAnimations($firstAnimatingElems);
+	
+	//Pause carousel  
+	$myCarousel.carousel('pause');
+	
+	
+	//Other slides to be animated on carousel slide event 
+	$myCarousel.on('slide.bs.carousel', function (e) {
+		var $animatingElems = $(e.relatedTarget).find("[data-animation ^= 'animated']");
+		doAnimations($animatingElems);
+	});  
+    $('#carousel-example-generic').carousel({
+        interval:4000,
+        pause: "false"
+    });
+	
+})(jQuery);	
+
+
+    </script>
+	<!-- Fin slider -->
+
+
+    <script type="text/javascript">
+			$(document).ready(function() {
+				//responsive menu toggle
+				$("#menutoggle").click(function() {
+					$('.xs-menu').toggleClass('displaynone');
+
+					});
+				//add active class on menu
+				$('ul li').click(function(e) {
+					e.preventDefault();
+					$('li').removeClass('active');
+					$(this).addClass('active');
+				});
+			//drop down menu	
+					$(".drop-down").hover(function() {
+						$('.mega-menu').addClass('display-on');
+					});
+					$(".drop-down").mouseleave(function() {
+						$('.mega-menu').removeClass('display-on');
+					});
+			
+			});
+	</script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('[data-toggle="tooltip"]').tooltip({
+            placement : 'top'
+            });
+        });
+    </script>
   </body>
 </html>
