--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,44 +1,132 @@
 {% extends "base.html" %}
 {% load mathfilters %}
 {% load static thumbnail chartit %}
-
+{% load core_extras %}  
 {% block titulo %}
 {{ obj.nombre }}
 {% endblock %}
 
 {% block slide_portada %}
-<div id="myCarousel2" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        {% for banner in banners %}
-        <li data-target="#myCarousel2" data-slide-to="{{forloop.counter0}}" {% if forloop.first %} class="active"{% endif%} style="background-color: #{{ banner.color }}"></li>
-        {% endfor %}
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        {% for banner in banners %}
-          <!--Slider Item{{ banners.count }}-->
-          <div class="item{% if forloop.first %} active{% endif%}" style="background-color: #{{ banner.color }}">
-            <div class="container">
-              {% thumbnail banner.imagen "1170x500" crop='center' as img %}
-                <img src="{{ img.url }}" alt="{{ banner }}"/>
-              {% endthumbnail %}
-              <!--div class="carousel-caption">
-                <h1>{{ banner.titulo }}</h1>
-                <p>{{ banner.descripcion }}</p>
-              </div-->
+<div class="row">
+    <div class="col-md-8 col-sm-8 pull-left slider-portada">
+
+
+<div id="first-slider">
+    <div id="carousel-example-generic" class="carousel slide carousel-fade">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+        </ol>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+            <!-- Item 1 -->
+            <div class="item active slide1">
+                    <div class="pull-right col-md-7 text-right info">
+                        <img style="max-width: 120px;"  data-animation="animated zoomInLeft" src="/static/img/inversion.png">
+                        <h3 data-animation="animated bounceInDown">Conoce los planes de inversion</h3>
+                        <h4 data-animation="animated bounceInUp">para Tu municipio</h4>             
+                     </div>
+             </div> 
+            <!-- Item 2 -->
+            <div class="item slide2">
+                    <div class="col-md-7 text-right pull-right">
+                        <img style="max-width: 120px;"  data-animation="animated zoomInLeft" src="/static/img/inversion.png">
+                        <h3 data-animation="animated bounceInDown">Participemos en la consulta del presupuesto municipal</h3>
+                        <h4 data-animation="animated bounceInUp">Informémonos dónde y cuándo sera </h4>
+                     </div>
             </div>
-          </div>        
-        {% endfor %}
-      </div>
-</div><!-- /.carousel -->
-        <div class="row intro">
-            <div class="container text-center">
-                <div class="col-md-12">En este sitio encontrará información de los presupuestos de los 153 municipios del país a manera de indicadores de gestion para hacer seguimiento a la ejecución presupuestaria.</div>
-            </div>
-            <br clear="all" />
         </div>
-        <!--presupuesto de consulta muelle de los buelles -->
+        <!-- End Wrapper for slides-->
+        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <i class="fa fa-angle-left"></i><span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <i class="fa fa-angle-right"></i><span class="sr-only">Next</span>
+        </a>
+    </div>
+</div>
+
+        {%  comment %} 
+        <div id="myCarousel2" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+            {% for banner in banners %}
+                <li data-target="#myCarousel2" data-slide-to="{{forloop.counter0}}" {% if forloop.first %} class="active"{% endif%} style="background-color: #{{ banner.color }}"></li>
+            {% endfor %}
+            </ol>
+            <div class="carousel-inner" role="listbox">
+                {% for banner in banners %}
+                    <!--Slider Item{{ banners.count }}-->
+                    <div class="item{% if forloop.first %} active{% endif%}" style="background-color: #{{ banner.color }}">
+                        <div class="container">
+                          {% thumbnail banner.imagen "1170x500" crop='center' as img %}
+                            <img class="img-responsive" src="{{ img.url }}" alt="{{ banner }}"/>
+                          {% endthumbnail %}
+                          <div class="carousel-caption">
+                            <p>{{ banner.descripcion }}</p>
+                          </div>
+                        </div>
+                    </div>
+                {% endfor %}
+             </div>
+        </div>
+        {% endcomment %}
+    </div>
+	<div class="col-md-4 col-sm-4">
+          <div class="panel panel-default verde">
+                <div class="panel-body">
+                    <h4>PRESUPUESTOS MUNICIPALES</h4>
+                    <button type="button" class="btn btn-default">Leer más</button>
+                 </div>
+          </div> 
+          <div class="panel panel-default celeste">
+                <div class="panel-body">
+                    <h4>PRESUPUESTO CONSOLIDADO</h4>
+                    <button type="button" class="btn btn-default">Leer más</button>
+                </div>
+          </div>  
+    </div>
+</div>
+
 {% endblock %}
+
+{% block buscador_portada %} 
+<section>
+<div class="container-fluid buscador">
+    <div class="col-md-12 col-sm-12">
+        <div id="search">                                                           
+            <form method="GET">
+                <div class="col-md-3 col-sm-3">   
+                    <select name="municipio" class="btn btn-defaul btn-lg  dropdown-toggle" data-toggle="dropdown">                                                   
+                    <option value="">Consolidado</option>                             
+                       {% for amunicipio in municipio_list %}                                      
+                           <option {% if amunicipio.slug == municipio.slug %}selected{% endif %} value="{{amunicipio.slug}}">{{amunicipio}}</option>
+                       {% endfor %}                                                                
+                    </select>         
+               </div>
+               <div class="col-md-3 col-sm-3">                                                       
+                   <select name="year" class="btn btn-defaul btn-lg  dropdown-toggle" data-toggle="dropdown">                                                        
+                    <option value="">Año</option>                                             
+                        {% for ayear in year_list %}                                                
+                            <option {% if ayear == year|add:"0" %}selected{% endif %} value="{{ayear}}">{{ayear}}</option>
+                        {% endfor %}                                                                
+                   </select>
+               </div>  
+              <div class="col-md-3 col-sm-3">
+                  <select name="indicador" class="btn btn-defaul btn-lg  dropdown-toggle" data-toggle="dropdown">
+                      <option value="">Indicador</option>
+                  </select>  
+              </div>
+              <div class="col-md-3 col-sm-3">  
+                  <input type="submit" value="Buscar" class="text-center btn btn-primary"/> 
+              </div>    
+            </form>                 
+        </div> 
+     </div>  
+</div>
+</section> 
+{% endblock %} 
 {% block cajas_portada %}
     <section id="recuadros" style="margin-bottom: -60px;">
         <div class="container">
@@ -119,6 +207,7 @@
     </section>
 {% endblock %}
 {% block main_content %}
+        {% comment %}
         <div class="clear"></div>
         <div class="text-center">
             <h2 class="titularp">Consolidado de Presupuestos Municipales 2016</h2>
@@ -188,6 +277,7 @@
                 </div>
             </div>
         </div>
+        {% endcomment %}
 {% endblock %}
 
 {% block inversiones_portada %}
@@ -195,46 +285,43 @@
         <div class="container">
             <div class="row">
                 <div class="text-center">
-                    <h2 class="titular" style="margin-bottom:40px;">Inversi&oacute;n Municipal 2016</h2>
+                    <h2 class="titular" style="margin-bottom:0px;">Inversi&oacute;n Municipal 2016</h2>
                     <!--FIXME: Una vez se cargue el ejecutado cambiar
                     Presupuesto por Ejecucion --!>
+                     <p><span class="text-info"><strong>* Invertido en el periodo</strong></p>
+                     <p><span class="text-danger"><strong>** Mínimo por ley>:</strong>
+                        Los gobiernos municipales, asignarán anualmente de las transferencias de inversión los porcentajes mínimos para los siguientes sectores priorizados:<br>
+                     <p><span class="text-danger"><strong>Salud 5%, Educación 5%, Medio Ambiente 5%, Agua y Saneamiento 7.5%.</strong></p>
                 </div>
-                <div class="col-md-2">
-                    <div class="clearfix">
+                <div class="clearfix" style="margin-bottom:60px;">
                         <div class="pull-right">
                             <a class="prev" href="#myCarousel" data-slide="prev"><i class="icon-angle-left icon-large"></i></a> <a class="next" href="#myCarousel" data-slide="next"><i class="icon-angle-right icon-large"></i></a>
                         </div>
-                    </div>
-                    <p><span class="text-info"><strong>* Invertido en el periodo</strong></p>
-                    <p><span class="text-danger"><strong>** Mínimo por ley</strong>:
-                    Los gobiernos municipales, asignarán anualmente de las transferencias de inversión los porcentajes mínimos para los siguientes sectores priorizados: Salud 5%, Educación 5%, Medio Ambiente 5%, Agua y Saneamiento 7.5%.</p>
-                </div>
-		<div class="col-md-10">
+                </div> <!--/.claarfix -->
+		  <div class="container">
+          <div class="col-md-12 col-sm-12">
     		    <div id="carousel-inv" class="carousel slide" data-ride="carousel">
                        <!-- Indicators -->
-                        <ul class="carousel-indicators">
-                            <li data-target="#carousel-inv" data-slide-to="0" class="active"></li>
-                            <li data-target="#carousel-inv" data-slide-to="1"></li>
-                        </ul>
                         <div class="carousel-inner" role="listbox">
-
                         {% for i in inversion_categoria %}
                             {% if forloop.first or forloop.counter0|divisibleby:4 %}
-                            <div class="item inversion {% if forloop.first %}active{% endif %} text-center">
-                                <ul class="thumbnails">
+                            <div class="item inversion {% if forloop.first %}active{% endif %}" style="background-color: #{{ banner.color }}">
+
+                                <ul class="thumbnails" style="background-color: #{{ banner.color }}">
                             {% endif %}
                                 <li class="col-md-3 col-sm-3 col-xs-6">
                                   <img src="{% static 'img/'|add:i.catinversion__slug|add:'.png' %}" class="img-responsive" alt="" />
-                                  <a href="#">{{ i.catinversion__nombre }}</a>
-                                  <p class="cifra text-info">* {{ i.ejecutado|div:total_inversion.ejecutado|mul:100|floatformat }}% <br />
-                                  <span class="text-danger cifra minimo">{% if i.catinversion__minimo %}* {{ i.catinversion__minimo|floatformat }}%{% endif %}</span>
+                                  <div class="cifra text-info"> 
+                                      <a href="#">{{ i.catinversion__nombre }}</a>
+                                      <span class="count">* {{ i.ejecutado|div:total_inversion.ejecutado|mul:100|floatformat }}% </span><br>
+                                  </div>
                                 </li>
                             {% if forloop.last or forloop.counter|divisibleby:4 %}
                                 </ul>
                             </div>
                             {% endif %}
                         {% endfor %}
-                        </div>
+                        </div><!--/.carousel-inner-->
                         <a class="left carousel-control" href="#carousel-inv" role="button" data-slide="prev">
                             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                             <span class="sr-only">Previous</span>
@@ -243,106 +330,10 @@
                             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                             <span class="sr-only">Next</span>
                         </a>
-                    </div><!-- /.carousel -->
-                </div>
-            </div>
-            <hr />
-	    <div class="col-md-12">
-		    <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <h3>Inversión mínima de los ingresos  corrientes por categoría de municipio
-                    <button type="button" class="btn btn-success btn-xs question" data-toggle="modal" data-target="#inversion-minima">
-                    </button>
-                    </h3>
-                </div>
-			    <div class="panel-body">
-                    <div id='inversion_area'>
-                    </div>
-		    	</div>
-		    </div>
-            <!-- GF modal -->
-            <div class="modal fade" id="inversion-minima" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="myModalLabel">{{ desc_inversionminima.nombre }}</h4>
-                      </div>
-                      <div class="modal-body">
-                          {{ desc_inversionminima.descripcion|safe|linebreaks }}
-                      </div>
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
-                      </div>
-                    </div>
-                </div>
-            </div>
-		</div>
-	    <div class="col-md-12">
-		    <div class="panel panel-success">
-			    <div class="panel-heading">
-                    <h3>Inversión mínima por sector priorizado
-                    <button type="button" class="btn btn-primary btn-xs question" data-toggle="modal" data-target="#inversion-sector">
-                    
-                   </button>
-                   </h3>    
-                </div>
-
-			    <div class="panel-body">
-                    <div id='inversion'>
-                </div>
-			</div>
-            <!-- GF modal -->
-            <div class="modal fade" id="inversion-sector" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="myModalLabel">{{ desc_inversionsector.nombre }}</h4>
-                      </div>
-                      <div class="modal-body">
-                          {{ desc_inversionsector.descripcion|safe|linebreaks }}
-                      </div>
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
-                      </div>
-                    </div>
-                </div>
-            </div>
-	    </div>	
-	</div>
-   </section>
-    <div class="clear"></div>
-   <script type="text/javascript">
-    var xref = {
-        {% for d in departamentos %}
-        {{d.codigo}}: '<span id="submapa"><div onclick="javascript:$(' + "'#submapa'" + ').fadeOut();" style="float:right">&#x274c;</div> <h3 class="text-success">{{d.nombre}}</h3> </div><img src="/static/img/{{d.codigo}}.jpg" usemap="#{{d.codigo}}" /></span>',
-        {% endfor %}
-    };
-    var defaultDipTooltip = 'I know you want the dip. But it\'s loaded with saturated fat, just skip it and enjoy as many delicious, crisp vegetables as you can eat.';
-
-    $('img').mapster({
-        mapKey: 'municipio',
-        fillOpacity: 0.4,
-        fillColor:"337AB7",
-        showToolTip: true,
-        toolTipClose: ["tooltip-click", "area-click"],
-        onClick: function (e) {
-            var newToolTip = defaultDipTooltip;
-            $('#selections').html(xref[e.key]);
-                if (e.key==='managua') {
-                    newToolTip = "OK. I know I have come down on the dip before, but let's be real. Raw asparagus without any of that " +
-                            "delicious ranch and onion dressing slathered all over it is not so good.";
-                }
-                image.mapster('set_options',{
-                    areas: [{
-                        key: "managua",
-                        toolTip: newToolTip
-                    }]
-                });
-        },
-        showToolTip: true,
-    });
-    </script>
-
-{% endblock %}
+                </div><!-- /.carousel -->
+            </div> <!--/.col-md-->
+          </div> <!--/.container-->
+     </div><!--/.row-->
+</div><!--/.container-->
+</section>
+    {% endblock %} 
