Cambiando diseno de portada con iconos svg y mapa de hightchar + pagina de municipio con consolidado en html

--- a/core/static/css/bubbletree.css
+++ b/core/static/css/bubbletree.css
@@ -1,9 +1,11 @@
-
+.bubbletree-container{
+   min-height: 400px; 
+   position:relative;
+}
 .bubbletree-wrapper {
 	width: 100%;
 	height: 100%;
-	position: absolute;
-}
+	position: absolute;cofog-}
 
 .bubbletree {
 	background: #fff;
