--- a/core/templates/menu.html
+++ b/core/templates/menu.html
@@ -3,7 +3,7 @@
 				<nav class="xs-menu displaynone">
 					<ul>
 						<li class="active">
-							<a href="#">Home</a>
+							<a href="/">Home</a>
 						</li>
 						<li>
 							<a href="#">About</a>
@@ -36,24 +36,35 @@
 						<a href="#">El Observatorio</a>
 					    <div class="nav-expand"> 
 						<div class="mega-menu fadeIn animated">
-							<div class="mm-3column">
-								<span class="left-images menuconsolidado">
-								<p>Presupuesto municipal consolidado </p>
-                				</span>
-							</div>
-							{% regroup municipios by depto as departamentos %}
-							{% for departamento in departamentos %}
-								<div class="col-md-2 pull-left">
-									<span class="categories-list">
-										<span> {{ departamento.grouper }}</span>
-										<ul>
-             								{% for item in departamento.list %}
-							                 <li>{{ item.nombre }}</li>
-								             {% endfor %}
-								        </ul>
-									</span>
-							    </div>
-							{% endfor %}
+							<div id="carousel-menu" class="carousel slide" data-ride="carousel">
+								<div class="carousel-inner" role="listbox">
+									{% regroup municipios by depto as departamentos %}
+									{% for departamento in departamentos %}
+											{% if forloop.counter0|divisibleby:5 or forloop.first %}
+										    	<div class="item{% if forloop.first %} active{% endif %}">
+											{% endif %}
+                                                <ul class="col-md-2">
+                                                    <li><div class="titseccion">{{ departamento.grouper }}</div>
+                                                        <ul class="municipios text-left">
+            	         								    {% for item in departamento.list %}
+                                                            <li><a href="/{{ item.depto.codigo }}/">{{ item.nombre }}</a></li>
+					        				                {% endfor %}
+                                                        </ul>
+                                                    </li>
+                                                </ul>
+    										{% if forloop.counter|divisibleby:5 or forloop.last%}</div>{% endif %}
+        							{% endfor %}
+            					</div>
+                                <!-- Controls -->
+                                <a class="left carousel-control" href="#carousel-menu" role="button" data-slide="prev">
+                                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="right carousel-control" href="#carousel-menu" role="button" data-slide="next">
+                                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
 						</div>
 				        </div>
 					</li>
