--- a/core/static/css/bubbletree.css
+++ b/core/static/css/bubbletree.css
@@ -1,54 +1,48 @@
-.bubbletree-container{
-   min-height: 400px; 
-   position:relative;
+.bubbletree-container {
+    height: 600px;
+    position: relative;
 }
 .bubbletree-wrapper {
-	width: 100%;
-	height: 100%;
-	position: absolute;cofog-}
-
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    cofog-
+}
 .bubbletree {
-	background: #fff;
-	position: relative;
-	height: 100%;
-	overflow: hidden;
+    background: #fff;
+    position: relative;
+    height: 100%;
+    overflow: hidden;
 }
-
 .bubbletree .bubbletree-label {
-	position: absolute;
-	color: #fff;
-	text-align: center;
-	cursor: default;
+    position: absolute;
+    color: #fff;
+    text-align: center;
+    cursor: default;
 }
-
 .bubbletree .bubbletree-amount {
-	font-family: Graublau, Georgia, sans-serif;
-	font-size: 16px;
+    font-family: Graublau, Georgia, sans-serif;
+    font-size: 16px;
 }
-
 .bubbletree .bubbletree-desc {
-	font-family: sans-serif;
-	font-size: 11px;
-
+    font-family: sans-serif;
+    font-size: 11px;
 }
-
 .bubbletree .bubbletree-label2 {
-	position: absolute;
-	color: #000;
-	text-align: center;
-	cursor: default;
-	font-size: 11px;
-	font-family: sans-serif;
-	margin-top:5px;
+    position: absolute;
+    color: #000;
+    text-align: center;
+    cursor: default;
+    font-size: 11px;
+    font-family: sans-serif;
+    margin-top: 5px;
 }
-
 .bubbletree .bubbletree-label2 span {
-	background: #fff;
+    background: #fff;
 }
-
 .loading {
-	z-index: 1000;
-	position: absolute;
-	width: 700px;
-	height: 400px;
+    z-index: 1000;
+    position: absolute;
+    width: 700px;
+    height: 400px;
 }
