--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -54,10 +54,12 @@ $(function() {
         data: data,
         container: '.bubbletree',
         bubbleType: 'icon',
+        bubbleStyles: {
+            'cofog': BubbleTree.Styles.Cofog
+        },
         formatValue: function(value) {
-            return 'C$ ' + value.toString() + ' millones';
+            return 'C$ ' + value.toString() + 'M';
         }
-
     });
 });
     </script>
@@ -87,13 +89,13 @@ $(function() {
         {% endif %}
         <li role="presentation"><a href="#oimorigen" aria-controls="oimorigen" role="tab" data-toggle="tab">Informaci&oacute;n hist&oacute;rica</a></li>
     </ul>
-    {#
+    <!--
     {% if municipio and charts.4 %}
         {{ charts|load_charts:"ejecutado, comparativo_anios, comparativo2, comparativo3, tipo, asignado_barra, barra" }}
     {% else %}
         {{ charts|load_charts:"ejecutado,comparativo2,tipo,comparativo3,comparativo_anios" }}
     {% endif %}
-    #}
+    -->
     <div id="oimTabContent" class="tab-content">
       <div role="tabpanel" class="tab-pane fade active in" id="asignados" aria-labelledby="asignados-tab">
         <!--maribel 20/07 - ingresos resumen -->
@@ -122,7 +124,7 @@ $(function() {
     <!--Fin de resumen-->
           <!--maribel 20/07 ogim-tabla1 -->
           <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-7">
               <h3>Ingresos del período</h3>
               <div class="bubbletree-container">
               <div class="bubbletree-wrapper">
@@ -132,7 +134,7 @@ $(function() {
           </div>
 
         <!-- maribel 20/07- oim-tabla2 -->
-        <div class="col-md-6">
+        <div class="col-md-5">
         	{% descargar_excel "oim1" %}
             <h3>Ingresos del período</h3>
             <h4>Ingresos en millones de córdobas corrientes  <a class="btn btn-success" role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
