--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -17,7 +17,9 @@
     <script type="text/javascript" src="{% static 'js/bubbletree.js' %}"></script>
     <script type="text/javascript" src="http://assets.openspending.org/openspendingjs/master/lib/aggregator.js"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'css/bubbletree.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bar-chart.css' %}" />
     <script type="text/javascript" src="{% static 'js/cofog.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/bar-chart.js' %}"></script>
     <script type="text/javascript">
 $(function() {
     var $tooltip = $('<div class="tooltip">Tooltip</div>');
@@ -124,7 +126,7 @@ $(function() {
     <!--Fin de resumen-->
           <!--maribel 20/07 ogim-tabla1 -->
           <div class="row">
-          <div class="col-md-7">
+          <div class="col-md-6">
               <h3>Ingresos del período</h3>
               <div class="bubbletree-container">
               <div class="bubbletree-wrapper">
@@ -268,7 +270,23 @@ $(function() {
             <!-- /fin oim-tabla4 nacional-->
             <!-- maribel 20/07 oim-tabla4-municipal -->
             {% if municipio %}
-                <div class="col-md-7">
+
+                <div class="col-md-6">
+                <div class="progress-container horizontal rounded">
+                  <h2>Recaudación por habitante</h2>
+                {% for row in otros|dictsortreversed:"asignado_percent" %}
+                  <div class="horizontal">{{ row.ingreso__municipio__nombre}}</div>
+                  <div class="progress_bar horizontal">
+                    <div class="progress-track">
+                      <div class="progress-fill">
+                        <span>{{ row.comparative_percent }}%</span>
+                      </div>
+                    </div>
+                  </div>
+                 {% endfor %}
+                </div>
+                </div>
+                <div class="col-md-6">
                 	{% descargar_excel "oim8" %}
                     {% if year == '2016' %}
                         <h3>Recaudación por habitante</h3>
